--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,11 @@
         <artifactId>commons-lang</artifactId>
         <version>2.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
     <dependency>
         <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter</artifactId>
-        <version>RELEASE</version>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.7.0-M1</version>
         <scope>test</scope>
     </dependency>
 </dependencies>
